1.（选做）本机使用 G1 GC 启动一个程序，仿照课上案例分析一下 JVM 情况。